Added dynamic PORT configuration for Render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=gemini-chat
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 gemini.api.key=${GEMINI_API_KEY}
 
+server.port=${PORT:8080}
